# Wikipedia2LaTeX

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
Wikipedia2LaTeX/: __init__.py
Wikipedia2LaTeX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conf.py  index.rst  modules.rst  wikipedia_converter.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  usage.doctree  wikipedia_converter.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html  wikipedia_converter.html
docs/_build/html/_modules/: index.html  wikipedia_converter.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
src/: __init__.py  wikipedia_converter.py
src/Wikipedia2LaTeX/: __init__.py  main.py  wikipedia_converter.py
src/Wikipedia2LaTeX.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
