[project]
name = "Wikipedia2LaTeX"
version = "0.0.1"
authors = [
  { name="L.E.Charles", email="charles.lucas4665@gmail.com" },
]
description = "A small tool to convert Wikipedia articles to pdf LaTeX documents"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/charlesl46/Wikipedia2LaTeX/"
